--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "name": "public-tweet-statistics",
-  "version": "0.0.1",
+  "version": "0.8.0",
   "description": "node app for streaming public tweets",
   "main": "index.js",
   "dependencies": {
     "commander": "^3.0.2",
+    "emoji-regex": "^8.0.0",
+    "json-beautify": "^1.1.1",
+    "rxjs": "^6.5.3",
     "twit": "^2.2.11"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/node": "^12.12.6",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,6 +32,6 @@
   },
   "homepage": "https://github.com/eppineda/public-tweet-statistics#readme",
   "bin": {
-    "tweets": "./index.js"
+    "tweets": "dist/index.js"
   }
 }
